# russian-whisper

./: .gitignore  INSTALL.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.ps1  setup.sh  transcribe.ps1  transcribe.py  transcribe.sh
