[project]
name = "russian-whisper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "ctranslate2==4.6.0",
    "dol==0.3.19",
    "faster-whisper==1.1.1",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fsspec==2025.5.1",
    "hf==0.0.8",
    "hf-xet>=1.2.0",
    "huggingface==0.0.1",
    "huggingface-hub==0.33.1",
    "humanfriendly==10.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "keyboard==0.13.5",
    "llvmlite==0.44.0",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "onnxruntime==1.22.0",
    "packaging==25.0",
    "pillow==11.2.1",
    "protobuf==6.31.1",
    "pycparser==2.22",
    "pyreadline3==3.5.4",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "soundfile==0.13.1",
    "sympy==1.13.1",
    "tokenizers==0.21.2",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "tqdm==4.67.1",
    "typing==3.7.4.3",
    "typing-extensions==4.14.0",
    "urllib3==2.5.0",
]

[tool.uv]
environments = [
	"sys_platform == 'win32'",
	"sys_platform == 'linux'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
