[project]
name = "russian-whisper"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.1.1",
    "rich>=13.0",
    "soundfile>=0.13.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.uv]
environments = [
	"sys_platform ==  'win32'",
	"sys_platform ==  'linux'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform ==  'linux' or sys_platform ==  'win32'" }]
torchaudio = [{ index = "pytorch-cu124", marker = "sys_platform ==  'linux' or sys_platform ==  'win32'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform ==  'linux' or sys_platform ==  'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
